Fix latency check
analyzer

--- a/Faolan.Core/Faolan.Core.csproj
+++ b/Faolan.Core/Faolan.Core.csproj
@@ -1,27 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputPath>..\bin\$(Configuration)\</OutputPath>
-    <DefineConstants>$(Configuration.ToUpper());TRACE</DefineConstants>
-    <BuildDate>$([System.DateTime]::UTCNow.ToString("HH:mm:ss dd-MM-yyyy"))</BuildDate>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<TargetFramework>net7.0</TargetFramework>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<OutputPath>..\bin\$(Configuration)\</OutputPath>
+		<DefineConstants>$(Configuration.ToUpper());TRACE</DefineConstants>
+		<BuildDate>$([System.DateTime]::UTCNow.ToString("HH:mm:ss dd-MM-yyyy"))</BuildDate>
+	</PropertyGroup>
 
-  <PropertyGroup>
-    <Authors>Project Faolan</Authors>
-    <PackageId>Faolan.Core</PackageId>
-    <Version>0.1.0</Version>
-    <Description>$(BuildDate)</Description>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Authors>Project Faolan</Authors>
+		<PackageId>Faolan.Core</PackageId>
+		<Version>0.1.0</Version>
+		<Description>$(BuildDate)</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.2" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<!--<PackageReference Include="SharpZipLib" Version="1.4.2" />-->
+		<PackageReference Include="System.ServiceModel.Primitives" Version="4.10.2" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.4" />
+	</ItemGroup>
 </Project>
