--- a/Faolan.PacketAnalyzer/Faolan.PacketAnalyzer.csproj
+++ b/Faolan.PacketAnalyzer/Faolan.PacketAnalyzer.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Faolan.Core\Faolan.Core.csproj" />
+		<ProjectReference Include="..\Faolan\Faolan.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
